--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
     <li><i>Really</i> agile</li>
     <li>Flexible working arrangements (hours, location)</li>
     <li>Good for the world</li>
+    <li>Prioritises regular learning (every Friday?)</li>
 </ul>
